welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: type mismatch;
 found   : Unit
 required: Int
  if (a==b || a==c || b==c){
  ^